* Fixed overflow of Transaction list item with long comment in select mode

--- a/src/view/Components/TransactionListItem/style.scss
+++ b/src/view/Components/TransactionListItem/style.scss
@@ -18,6 +18,7 @@
   align-items: center;
   justify-content: flex-start;
   width: 0;
+  flex-shrink: 0;
   transition: width 0.2s ease;
 
   .checkbox {
